--- a/console/TGFCSpidermanX/MainWindow.xaml
+++ b/console/TGFCSpidermanX/MainWindow.xaml
@@ -1,23 +1,28 @@
-﻿<controls:MetroWindow x:Class="taiyuanhitech.TGFCSpidermanX.MainWindow"
+﻿<controls:MetroWindow
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:localConverter="clr-namespace:taiyuanhitech.TGFCSpidermanX.Converter"
+                      xmlns:localViewModel="clr-namespace:taiyuanhitech.TGFCSpidermanX.ViewModel"
+                      x:Class="taiyuanhitech.TGFCSpidermanX.MainWindow"
                       Title="GFCSpidermanX"
                       Height="600"
                       Width="800"
                       TitleCaps="False"
                       Icon="t.ico">
+    <controls:MetroWindow.Resources>
+        <localConverter:Bool2Visibility x:Key="ReverseBool"/>
+        <localViewModel:Dashboard x:Key="DashboardViewModel"/>
+    </controls:MetroWindow.Resources>
     <DockPanel LastChildFill="True">
         <TextBlock DockPanel.Dock="Left"
-                   Margin="10,5,5,5"
-                   VerticalAlignment="Center">
+			Margin="10,5,5,5"
+			VerticalAlignment="Center">
             <TextBlock.LayoutTransform>
                 <RotateTransform Angle="90" />
-            </TextBlock.LayoutTransform>
-            用 生 命 玩 论 坛
-        </TextBlock>
+            </TextBlock.LayoutTransform><Run Text="用 生 命 玩 论 坛"/></TextBlock>
         <TabControl controls:TabControlHelper.IsUnderlined="True" Margin="0,5,0,5">
-            <TabItem Header="控制台" controls:ControlsHelper.HeaderFontSize="20">
+            <TabItem Header="控制台" controls:ControlsHelper.HeaderFontSize="20" DataContext="{Binding Source={StaticResource DashboardViewModel}}">
                 <Grid Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -25,44 +30,43 @@
                         <ColumnDefinition Width="2*" MinWidth="100"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" MinWidth="50">
-                        用户名
-                    </TextBlock>
-                    <TextBox Grid.Row="0" Grid.Column="1" Margin="10,5,0,5" VerticalAlignment="Center" Text="{Binding UserName ,Mode=TwoWay}" IsEnabled="{Binding LoginInfoEnabled}"></TextBox>
-                    <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" MinWidth="50">
-                        密码
-                    </TextBlock>
-                    <PasswordBox Name="Password" Grid.Row="1" Grid.Column="1" Margin="10,5,0,5" VerticalAlignment="Center"  IsEnabled="{Binding LoginInfoEnabled}"/>
+                    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" MinWidth="50"><Run Text="用户名"/></TextBlock>
+                    <TextBox Grid.Row="0" Grid.Column="1" Margin="10,5,0,5" VerticalAlignment="Center" Text="{Binding UserName}" IsEnabled="{Binding LoginInfoEnabled}"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" MinWidth="50"><Run Text="密码"/></TextBlock>
+                    <PasswordBox x:Name="Password" Grid.Row="1" Grid.Column="1" Margin="10,5,0,5" VerticalAlignment="Center"  IsEnabled="{Binding LoginInfoEnabled}"/>
                     <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="2">
-                        <Button Margin="30,10,10,10" Content="登录" FontSize="30" FontWeight="Bold" Click="Signin_OnClick"></Button>
+                        <Button x:Name="Login" Margin="30,10,10,10" Content="登录" FontSize="30" FontWeight="Bold" Click="Signin_OnClick"/>
                         <controls:MetroProgressBar IsIndeterminate="True"
-                                       Minimum="0"
-                                       Maximum="100"
-                                       Foreground="{DynamicResource AccentColorBrush}"
-                                       Margin="30, 0, 10, 0" />
+							Minimum="0"
+							Maximum="100"
+							Foreground="{DynamicResource AccentColorBrush}"
+							Margin="30, 0, 10, 0" 
+							Visibility="{Binding IsEnabled, ElementName=Login, Converter={StaticResource ReverseBool}}"/>
                     </StackPanel>
-                    <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,10"></Separator>
-                    <TextBlock Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">运行模式</TextBlock>
+                    <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,10"/>
+                    <TextBlock Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"><Run Text="运行模式"/></TextBlock>
                     <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
-                        <RadioButton GroupName="1" Content="手动" Margin="10" IsChecked="True"></RadioButton>
-                        <RadioButton GroupName="1" Content="自动" Margin="10"></RadioButton>
+                        <RadioButton GroupName="1" Content="手动" Margin="10" IsChecked="True"/>
+                        <RadioButton GroupName="1" Content="自动" Margin="10"/>
                     </StackPanel>
-                    <TextBlock Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">截止日期</TextBlock>
+                    <TextBlock Grid.Row="4" Grid.Column="0" VerticalAlignment="Center"><Run Text="截止日期"/></TextBlock>
                     <StackPanel Grid.Row="4" Grid.Column="1" Margin="10,5,0,5" Orientation="Horizontal" Grid.ColumnSpan="2">
                         <DatePicker VerticalAlignment="Center" Margin="0,0,30,0" MinWidth="180"/>
-                        <TextBlock VerticalAlignment="Center">起始页码</TextBlock>
-                        <TextBox Margin="30,0,0,0" Width="50">1</TextBox>
+                        <TextBlock VerticalAlignment="Center"><Run Text="起始页码"/></TextBlock>
+                        <TextBox Margin="30,0,0,0" Width="50" Text="1"/>
                     </StackPanel>
+                    <Button Name="Run" Content="运行" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" Margin="0,50,0,10"  VerticalAlignment="Center" FontSize="30" FontWeight="Bold" MinWidth="200" Click="Run_OnClick"/>
+                    <TextBox Name="OutputBox" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" Margin="30" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"></TextBox>
                 </Grid>
             </TabItem>
         </TabControl>
