删除原console app TGFCSpiderman 将wpf实现的TGFCSpidermanX改为TGFCSpiderman.

--- a/console/TGFCSpiderman/MainWindow.xaml
+++ b/console/TGFCSpiderman/MainWindow.xaml
@@ -2,8 +2,8 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      xmlns:localViewModel="clr-namespace:taiyuanhitech.TGFCSpidermanX.ViewModel"
-                      x:Class="taiyuanhitech.TGFCSpidermanX.MainWindow"
+                      xmlns:localViewModel="clr-namespace:taiyuanhitech.TGFCSpiderman.ViewModel"
+                      x:Class="taiyuanhitech.TGFCSpiderman.MainWindow"
                       Title="GFCSpidermanX"
                       Height="600"
                       Width="800"
