--- a/console/TGFCSpiderman/App.xaml
+++ b/console/TGFCSpiderman/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="taiyuanhitech.TGFCSpidermanX.App"
+﻿<Application x:Class="taiyuanhitech.TGFCSpiderman.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
