--- a/console/TGFCSpiderman/MainWindow.xaml
+++ b/console/TGFCSpiderman/MainWindow.xaml
@@ -14,6 +14,7 @@
         <localViewModel:Dashboard x:Key="DashboardViewModel"/>
         <localViewModel:SearchViewModel x:Key="SearchViewModel" />
         <localConverter:PostTitleConverter x:Key="PostTitleConverter" />
+        <localConverter:PostUriConverter x:Key="PostUriConverter" />
     </controls:MetroWindow.Resources>
     <DockPanel LastChildFill="True">
         <TextBlock DockPanel.Dock="Left"
@@ -100,7 +101,7 @@
                         <Button Name="Search" Content="搜索" Margin="0,20,0,0"  VerticalAlignment="Center" FontSize="20" FontWeight="Bold" MinWidth="100" IsDefault="True" Click="Search_OnClick"/>
                         <controls:ProgressRing Name="SearchProgress" Visibility="Hidden" IsActive="True" Width="35" Height="35" Margin="10,15,0,0"/>
                     </StackPanel>
-                    <DataGrid Name="SearchGrid" EnableRowVirtualization="True" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6" Margin="0 10 0 0" AutoGenerateColumns="False" GridLinesVisibility="Horizontal">
+                    <DataGrid Name="SearchGrid" IsReadOnly="True" EnableRowVirtualization="True" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6" Margin="0 10 0 0" AutoGenerateColumns="False" GridLinesVisibility="Horizontal">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="标题" Width="*">
                                 <DataGridTextColumn.Binding>
@@ -112,11 +113,28 @@
                             </DataGridTextColumn>
                             <DataGridTextColumn Binding="{Binding Path=UserName, Mode=OneWay}" Header="作者" MinWidth="100"/>
                             <DataGridTextColumn Binding="{Binding Path=CreateDate, StringFormat={}{0:yy/MM/dd HH:mm}, Mode=OneWay}" Header="发表时间" Width="100"/>
+                            <DataGridTemplateColumn Header="打开">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock HorizontalAlignment="Center">
+                                            <Hyperlink Foreground="White" Click="Hyperlink_OnClick">
+                                                <Hyperlink.NavigateUri>
+                                                    <MultiBinding Converter="{StaticResource PostUriConverter}">
+                                                        <Binding Path="Id" />
+                                                        <Binding Path="ThreadId" />
+                                                        <Binding Path="Order" />
+                                                    </MultiBinding>
+                                                </Hyperlink.NavigateUri>
+                                                打开
+                                            </Hyperlink>
+                                        </TextBlock>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
             </TabItem>
-
         </TabControl>
     </DockPanel>
 </controls:MetroWindow>
