--- a/console/TGFCSpiderman/MainWindow.xaml
+++ b/console/TGFCSpiderman/MainWindow.xaml
@@ -2,6 +2,7 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:localLib="clr-namespace:taiyuanhitech.TGFCSpiderman.CommonLib"
                       xmlns:localViewModel="clr-namespace:taiyuanhitech.TGFCSpiderman.ViewModel"
                       xmlns:localConverter="clr-namespace:taiyuanhitech.TGFCSpiderman.Converter"    
                       x:Class="taiyuanhitech.TGFCSpiderman.MainWindow"
@@ -12,7 +13,7 @@
                       Icon="t.ico">
     <controls:MetroWindow.Resources>
         <localViewModel:Dashboard x:Key="DashboardViewModel"/>
-        <localViewModel:SearchViewModel x:Key="SearchViewModel" />
+        <localLib:SearchDescriptor x:Key="SearchViewModel" />
         <localConverter:PostTitleConverter x:Key="PostTitleConverter" />
         <localConverter:PostUriConverter x:Key="PostUriConverter" />
         <localConverter:ScrubHtmlConverter x:Key="ScrubHtmlConverter" />
