--- a/console/TGFCSpiderman/MainWindow.xaml
+++ b/console/TGFCSpiderman/MainWindow.xaml
@@ -103,7 +103,7 @@
                     <TextBlock Grid.Row="1" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10">只搜主题</TextBlock>
                     <CheckBox Grid.Column="5" Grid.Row="1" Name="TopicOnly" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Center" IsChecked="{Binding TopicOnly, Mode=OneWayToSource}"/>
                     <TextBlock Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10">排序</TextBlock>
-                    <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Margin="10" ItemsSource="{Binding ElementName=TopicOnly,Path=IsChecked,Converter={StaticResource SortOrderItemSourceConverter}}" SelectedIndex="0" SelectionChanged="ComboBox_SelectionChanged"/>
+                    <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Margin="10" ItemsSource="{Binding ElementName=TopicOnly,Path=IsChecked,Converter={StaticResource SortOrderItemSourceConverter}}" SelectedIndex="0" SelectionChanged="ComboBox_SelectionChanged" SelectedValue="{Binding SortOrder, Mode=OneWayToSource}"/>
                     <TextBlock Grid.Row="2" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" Visibility="{Binding ElementName=TopicOnly, Path=IsChecked, Converter={StaticResource Bool2VisibilityConverter}}">回复结束日期</TextBlock>
                     <DatePicker Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" Margin="10" SelectedDate="{Binding ReplyEndDate, Mode=OneWayToSource}" Visibility="{Binding ElementName=TopicOnly, Path=IsChecked, Converter={StaticResource Bool2VisibilityConverter}}"/>
                     <StackPanel Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
